Fix alignment of moving column header stuff

--- a/src/s1/s1/static/stylesheets/scss/components/_moving_columns_theme.scss
+++ b/src/s1/s1/static/stylesheets/scss/components/_moving_columns_theme.scss
@@ -26,16 +26,21 @@
 
     .moving-column-menu {
         background: transparent;
+        font-size: inherit;
+        line-height: inherit;
         padding-left: 0;
 
         .moving-column-menu-button {
             color: $color-brand-one-normal;
-            line-height: 1;
         }
 
         .button {
             margin-right: 17px;
         }
+    }
+
+    .moving-column-menu-sorts {
+        @include inline-block;
     }
 
     .moving-column-body {
@@ -51,6 +56,12 @@
         background: transparent;
         color: $color-brand-one-normal;
         text-transform: uppercase;
+    }
+
+    .moving-column-menu-nav {
+        .button:last-child {
+            margin-right: 5px;
+        }
     }
 
     .moving-column-expand {
